# dispute-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: DESIGN_RATIONALE.md
src/: __init__.py  config.py
src/agent/: __init__.py  core.py  prompts.py  security.py
src/agent/middleware/: detect_ssn.py
src/models/: __init__.py  dispute.py  merchant.py  transaction.py
src/tools/: __init__.py  disputes.py  merchants.py  transactions.py
src/utils/: __init__.py  get_model.py  logging.py  pii.py  resilience.py  session.py
tests/: __init__.py  test_pii.py  test_tools.py
